Remove the custom appbuilder script because the appbuilder plugin we are using already handles Java 7 style OSX bundles.
Dima, I'm sorry that I cannot test this before committing, but Java on my machine is broken and I can't fix it yet.