@@ -124,7 +124,6 @@ cayenne {
 
 macAppBundle {
 	appOutputDir = 'distributions/macosx'
-	//dmgOutputDir = 'distributions/macosx'
 	creatorCode = "ishS"
 	backgroundImage = "${projectDir}/src/packaging/macosx/dmg.background.png"
 	mainClassName = "ish.oncourse.server.AngelServer"
@@ -159,7 +158,6 @@ macAppBundle {
 	dict.put ("LSTypeIsPackage", "true")
 
 	bundleExtras.put("CFBundleDocumentTypes", [dict])
-
 }
 
 
@@ -177,25 +175,6 @@ task installer_osx(dependsOn: [codeSign, createDmg]) {
 	doFirst {
 		logger.lifecycle("Creating the OSX installer (which is just a dmg file) for $project.name")
 	}
-}
-
-task installer_osx_java7(dependsOn: [fatJar, prepareKeychains], type: au.com.ish.AppBundlerTask) {
-    distributionPath = "${distsDir}/macosx_java7"
-    appName = "onCourseServer"
-    appIdentifier = "ish.oncourse"
-    mainClassName = "ish.oncourse.server.AngelServer"
-    iconFile = file("${projectDir}/src/packaging/macosx/onCourseServer.icns")
-    jarFile = file("${libsDir}/${project.name}-${project.version}-all.jar")
-    keychain = project.osxKeychain
-    certIdentity = project.osxKeychainIdentity
-
-    jvmOptions = ["-Dapple.awt.textantialiasing=true",
-                  "-DJFileChooser.appBundleIsTraversable=true",
-                  "-DJFileChooser.packageIsTraversable=true",
-                  "-Dapple.awt.antialiasing=true",
-                  "-Dapple.awt.showGrowBox=true",
-                  "-Xmx${project.maxmemoryServer}",
-                  "-XX:MaxPermSize=${project.maxpermgenServer}"]
 }
 
 project.ext.unixAppFiles = copySpec {
